--- a/src/app/shared/back-arrow-button/back-arrow-button.component.html
+++ b/src/app/shared/back-arrow-button/back-arrow-button.component.html
@@ -1,5 +1,9 @@
-<button mat-icon-button *ngIf="!showConfirmationModal" [routerLink]="[routeMap]">
+<button
+  mat-icon-button
+  *ngIf="!showConfirmationModal"
   matTooltip="Volver atrás"
+  matTooltipPosition="above"
+  [routerLink]="[routeMap]">
   <mat-icon svgIcon="chevron-left"></mat-icon>
 </button>
 
