--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/question-summary/question-summary.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/question-summary/question-summary.component.html
@@ -19,7 +19,7 @@
             {{ preview.hourFrom }}
           </ng-container>
           <ng-template #postNow class="preview-question__date--no-expiration">
-            Publicar ahora
+            Publicación inmediata
           </ng-template>
         </div>
         <div>
