--- a/src/app/views/dashboard/dashboard-views/dashboard-profile/dashboard-profile.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-profile/dashboard-profile.component.scss
@@ -1,8 +1,122 @@
 .wrapper {
   margin-top: 100px;
-
-  .d-flex {
-    align-items: center;
+  .action {
+    display: flex;
     justify-content: space-between;
+    align-items: center;
+    .button-back {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+    }
+  }
+  .form-inputs {
+    max-width: 280px;
+    width: 100%;
+    margin-right: 20px;
+    margin-bottom: 25px;
+  }
+  .mdc-evolution-chip-set__chips {
+    padding: 1rem;
+  }
+  .mat-mdc-standard-chip {
+    border-radius: 0;
+    margin-left: 0 !important;
+    padding: 10px 16px;
+  }
+  .border-gray {
+    border: 1px solid #939394;
+  }
+  .border-topleft-rad {
+    border-radius: 8px 0 0 8px;
+  }
+  .border-topright-rad {
+    border-radius: 0 8px 8px 0;
+  }
+  form {
+    width: 100%;
+    max-width: 600px;
+    padding-bottom: 30px;
+  }
+  mat-error {
+    font-size: 12px;
+  }
+  mat-hint {
+    color: #73777f;
+    font-size: 12px;
+  }
+  mat-divider {
+    margin: 32px 0;
+  }
+  mat-button-toggle-group {
+    width: fit-content;
+    border-radius: 8px;
+    border: 1px solid #939394;
+
+    &[aria-label="rol"] {
+      min-width: 412px;
+    }
+    &[aria-label="state"] {
+      min-width: 275px;
+    }
+
+    mat-button-toggle {
+      width: 100%;
+      border: 0.5px solid #939394;
+      font-size: 14px;
+      font-weight: 500;
+      color: #42474e;
+      &:first-child {
+        border-radius: 8px 0 0 8px;
+      }
+      &:last-child {
+        border-radius: 0 8px 8px 0;
+      }
+
+      span {
+        display: none;
+        opacity: 0;
+        color: #344b64;
+        transition: opacity 0.3s ease-out;
+      }
+    }
+  }
+  .form-buttons {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    button {
+      padding: 10px 24px 10px 24px;
+    }
+  }
+}
+.data-profile {
+  display: flex;
+  flex-direction: column;
+  p {
+    color: #333333;
+    font-size: 22px;
+  }
+  span{
+    margin-bottom: 16px;
+    strong{
+      font-size: 16;
+      color: #333333;
+    }
+    font-size: 16px;
+    color: #73777F;
+  }
+}
+
+.mat-button-toggle-checked {
+  background-color: #8bb4b4;
+  color: #344b64 !important;
+  transition: background-color 0.2s ease-in;
+
+  #icon-toggle {
+    display: inline-block;
+    opacity: 1;
   }
 }
