--- a/src/app/views/dashboard/dashboard-views/dashboard-users/table-users/table-users.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/table-users/table-users.component.html
@@ -36,7 +36,9 @@
       <ng-container matColumnDef="role">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Rol</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.roles.name }}
+          <ng-container *ngFor="let item of element.roles">
+            {{ item.name }}
+          </ng-container>
         </td>
       </ng-container>
       <ng-container matColumnDef="seeMore">
