--- a/src/app/views/dashboard/dashboard-views/dashboard-question/detail-question/detail-question.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/detail-question/detail-question.component.scss
@@ -1,34 +1,89 @@
 .wrapper {
-  padding: 32px 20px;
-  width: 380px;
+  margin-top: 100px;
+  h1 {
+    color: #002020;
+    margin-bottom: 48px;
+  }
+  .preview-question {
+    padding-left: 100px;
 
-  form {
-    width: 100%;
-  }
-}
-.action {
-  display: flex;
-  justify-content: end;
+    &__title {
+      font-size: 36px;
+      color: #002020;
+      margin-bottom: 35px;
+    }
+    &__category {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      color: #344b64;
+      font-size: 16px;
+      margin-bottom: 29px;
+    }
+    &__date {
+      margin-bottom: 36px;
+      color: #73777f;
+      font-size: 16px;
+      div {
+        margin-bottom: 16px;
+      }
+      strong {
+        color: #000;
+        margin-right: 12px;
+      }
+    }
+    hr {
+      border-color: #dbdbdb;
+      width: 100%;
+      margin: 35px 0;
+    }
+    &__response-data {
+      font-size: 16px;
+      color: #344b64;
 
-  button:first-child {
-    margin-right: 20px;
+      &:not(:last-child) {
+        margin-bottom: 38px;
+      }
+
+      h5 {
+        font-size: 16px;
+        font-weight: 500;
+        color: #261900;
+        margin-bottom: 16px;
+        background-color: #0062a10d;
+        padding: 8px 20px;
+      }
+
+      &--related-questions {
+        padding-left: 16px;
+        display: flex;
+        flex-direction: column;
+
+        span {
+          margin-bottom: 16px;
+          font-size: 14px;
+          color: #1b1b1f;
+        }
+      }
+    }
+    .action {
+      margin-top: 48px;
+      margin-bottom: 157px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 }
-.date-p {
-  font-size: 16px;
-  font-weight: 500;
-  margin-bottom: 16px;
-}
-mat-form-field {
-  width: 100%;
-  margin-bottom: 16px;
+.material-symbols-outlined {
+  font-size: 20px;
+  font-weight: 600;
   color: #73777f;
-  font-size: 16px !important;
-  mat-select {
-    text-transform: capitalize;
-  }
+  padding-right: 18px;
 }
-mat-hint {
-  font-size: 12px;
-  color: #73777f;
-}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
+.preview-question__category > .material-symbols-outlined {
+  font-size: 15px;
+  font-weight: 600;
+  color: #8bb4b4;
+  padding: 0 12px;
+}
