--- a/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
@@ -3,7 +3,9 @@
     <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="question">
         <th mat-header-cell *matHeaderCellDef>Pregunta</th>
-        <td mat-cell *matCellDef="let element" class="text-blue">{{ element.name }}</td>
+        <td mat-cell *matCellDef="let element" (click)="showDetail(element.path)" class="text-blue">
+          {{ element.name }}
+        </td>
       </ng-container>
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef>Categoría</th>
