--- a/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.scss
@@ -14,6 +14,10 @@
       &.text-blue {
         color: #0062a1;
         font-size: 14px;
+        &:hover {
+          cursor: pointer;
+          text-decoration: underline;
+        }
       }
       &.text-center {
         align-items: center;
