--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/question-summary/question-summary.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/question-summary/question-summary.component.html
@@ -71,13 +71,7 @@
           [routerLink]="['/dashboard/listado-de-preguntas/crear-pregunta']">
           Volver atrás
         </button>
-        <button
-          mat-flat-button
-          [routerLink]="['/dashboard/listado-de-preguntas']"
-          color="primary"
-          (click)="createQuestion()">
-          Publicar
-        </button>
+        <button mat-flat-button color="primary" (click)="createQuestion()">Publicar</button>
       </div>
     </div>
   </ng-container>
