--- a/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
@@ -15,7 +15,7 @@
       </ng-container>
       <ng-container matColumnDef="subcategory">
         <th mat-header-cell *matHeaderCellDef>Subcategoría</th>
-        <td mat-cell *matCellDef="let element">{{ element.sub_category }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.sub_category.name }}</td>
       </ng-container>
       <ng-container matColumnDef="lastupdate">
         <th mat-header-cell *matHeaderCellDef>Fecha de publicación</th>
